--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
       "start-program": "node server.js && react-scripts start && yarn start-api",
       "start": "react-scripts start",
       "start-api": "cd src && set FLASK_APP=api.py && py -m flask run --no-debugger",
-      "build": "react-scripts build && netlify-lambda build express",
+      "build": "node server.js",
       "test": "react-scripts test",
       "eject": "react-scripts eject"
     },
