--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "private": true,
     "dependencies": {
       
-    "cors": "^2.8.4",
-    "express": "^4.16.3",
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
         
     },
     "scripts": {
@@ -37,16 +37,6 @@
     "devDependencies": {
         "cors": "^2.8.5",
       "express": "^4.17.1",
-        "babel-cli": "^6.26.0",
-        "babel-plugin-module-resolver": "^3.1.1",
-        "babel-preset-env": "^1.7.0",
-        "babel-preset-react": "^6.24.1",
-        "cross-env": "^5.2.0",
-        "mini-css-extract-plugin": "^0.4.1",
-        "netlify-lambda": "^0.4.0",
-        "npm-run-all": "^4.1.3",
-        "parcel-bundler": "^1.9.4",
-    "serverless-http": "^2.3.0"
       }
   }
   
