--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     },
     "devDependencies": {
         "cors": "^2.8.5",
-      "express": "^4.17.1",
+      "express": "^4.17.1"
       }
   }
   
