--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
         "last 1 safari version"
       ]
     },
+    "engines":{
+        "node": "13.14.0"
+    }
+    ,
     "devDependencies": {
         "cors": "^2.8.5",
       "express": "^4.17.1"
